--- a/LeafletMap.html
+++ b/LeafletMap.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<title>Leaflet Plugins Test</title>
+	<title>Map</title>
 	<!-- Responsive -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
