--- a/LeafletMap.html
+++ b/LeafletMap.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Kawartha Fruit Tree Map</title>
+	<!-- Tab Icon -->
+	<link rel="shortcut icon" href="favicon. ico" type="image/x-icon">
 	<!-- Responsive -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
