favicon.ico hard linked

--- a/LeafletMap.html
+++ b/LeafletMap.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kawartha Fruit Tree Map</title>
 	<!-- Tab Icon -->
-	<link rel="shortcut icon" href="favicon. ico" type="image/x-icon">
+	<link rel="shortcut icon" type="image/x-icon" href="https://kawarthafruitmap.github.io/Map/favicon.ico">
 	<!-- Responsive -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
