--- a/LeafletMap.html
+++ b/LeafletMap.html
@@ -64,4 +64,10 @@
 <div id="mapid"></div>
 </body>
 <script src="js/general.js"></script>
+<script src="js/plugins.js"></script>
+<script>
+	$(window).on("load", function() {
+		$('body').addClass('loaded');
+	});
+</script>
 </html>
