--- a/LeafletMap.html
+++ b/LeafletMap.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
 </head>
-<body>
+<body class="loaded">
 	<!-- Page Loader -->
 	<div id="loader-wrapper">
 		<div id="loader"></div>
