--- a/LeafletMap.html
+++ b/LeafletMap.html
@@ -28,8 +28,15 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+<!-- From Riley's Repository -->
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="css/templatemo-style.css">
+<link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-<body class="loaded">
+<body>
 	<!-- Page Loader -->
 	<div id="loader-wrapper">
 		<div id="loader"></div>
