--- a/plantlist.html
+++ b/plantlist.html
@@ -29,7 +29,7 @@
     <!-- NEW NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-             <a class="navbar-brand" href="index.html">Kawartha Fruit Tree Map</a>
+             <a class="navbar-brand" href="fruittreemap.html">Kawartha Fruit Tree Map</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -37,8 +37,9 @@
        
            <ul class="navbar-nav ms-auto">
                <li class="nav-item"><a class="nav-link" href="fruittreemap.html"> Map </a></li>
-               <li class="nav-item"><a class="nav-link" href="Form.html">Data Collection</a></li>
+               
                <li class="nav-item"><a class="nav-link" href="Guide.html"> User Guide </a></li>
+               <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
                <li class="nav-item"><a class="nav-link" href="Dev.html">Development Process</a></li>
                <li class="nav-item dropdown">
                    <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Plant Resources</a>
