--- a/Dev.html
+++ b/Dev.html
@@ -63,8 +63,8 @@
            <ul class="navbar-nav ms-auto">
                <li class="nav-item"><a class="nav-link" href="fruittreemap.html"> Map </a></li>
                <li class="nav-item"><a class="nav-link" href="Guide.html"> User Guide </a></li>
-		<li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
-               <li class="nav-item"><a class="nav-link active" href="Dev.html">Development Process</a></li>
+		
+               <li class="nav-item"><a class="nav-link active" href="Dev.html">About</a></li>
                <li class="nav-item dropdown">
                    <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Plant Resources</a>
                    <ul class="dropdown-menu dropdown-menu-right">
