--- a/fruittreemap.html
+++ b/fruittreemap.html
@@ -134,8 +134,8 @@ https://templatemo.com/tm-556-catalog-z
                <li class="nav-item"><a class="nav-link active" href="fruittreemap.html"> Map </a></li>
                
                <li class="nav-item"><a class="nav-link" href="Guide.html"> User Guide </a></li>
-		   <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
-               <li class="nav-item"><a class="nav-link" href="Dev.html">Development Process</a></li>
+		   
+               <li class="nav-item"><a class="nav-link" href="Dev.html">About</a></li>
                <li class="nav-item dropdown">
                    <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Plant Resources</a>
                    <ul class="dropdown-menu dropdown-menu-right">
