--- a/Dev.html
+++ b/Dev.html
@@ -64,7 +64,7 @@
                <li class="nav-item"><a class="nav-link" href="fruittreemap.html"> Map </a></li>
                <li class="nav-item"><a class="nav-link" href="Guide.html"> User Guide </a></li>
 		
-               <li class="nav-item"><a class="nav-link active" href="Dev.html">About</a></li>
+               <li class="nav-item"><a class="nav-link active" href="index.html">About</a></li>
                <li class="nav-item dropdown">
                    <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Plant Resources</a>
                    <ul class="dropdown-menu dropdown-menu-right">
