--- a/Guide.html
+++ b/Guide.html
@@ -65,7 +65,7 @@
                
                <li class="nav-item"><a class="nav-link active" href="Guide.html"> User Guide </a></li>
 		   
-               <li class="nav-item"><a class="nav-link" href="Dev.html">About</a></li>
+               <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
                <li class="nav-item dropdown">
                    <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Plant Resources</a>
                    <ul class="dropdown-menu dropdown-menu-right">
