--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                    
                    <li class="nav-item"><a class="nav-link" href="Guide.html"> User Guide </a></li>
                             
-                   <li class="nav-item"><a class="nav-link" href="Dev.html">About</a></li>
+                   <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
                    <li class="nav-item dropdown">
                        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Plant Resources</a>
                        <ul class="dropdown-menu dropdown-menu-right">
