--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                Project Overview
+                Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map
             </h2>
             
         </div>
