--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
 <!--Page Content START-->
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
-            <h2 class="col-6 tm-text-primary">
+            <h2 class="col-6 tm-text-primary" style="width: auto;">
+                Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map
+            </h2>
+            
+        </div>
+	 <div class="row mb-4">
+            <h2 class="col-6 tm-text-primary" style="width: auto; font-size: medium;">
                 Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map
             </h2>
             
