--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
         </div>
 	 <div class="row mb-4">
-            <h2 class="col-6 tm-text-primary" style="width: auto; font-size: medium;">
+            <h2 class="col-6 tm-text-primary" style="width: auto; font-size: medium; color: black;">
                Welcome to the Kawartha Lakes and Haliburton County Fruit Tree and Edible Plant Map.<br>
 		    Kawartha Lakes and Haliburton County are on the territory
 		    of the Michi Saagiig Anishnaabe who have cared for these lands and waters since time immemorial and are covered by the Williams Treaties. This website enables all of us in the community to identify fruit bearing trees and bushes on publicly owned land such as roadsides and parks and then add them to this map so we all have access to. 
