--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 		    On this website you will find instructions on how to locate what is currently on the map and get help to identify and add the new trees and bushes you find. 
 		    You will learn that you can easily add these to the map from your phone or computer, add a photograph if you like and find links to recipes and harvesting information. 
 		    Be gentle with the trees and bushes when you harvest the food.  Always leave some for wildlife. If you find that you have more than you can use, kindly contact your local food bank to see if they can accept your extra harvest. <br>
-		    Thank you for adding public fruit trees and edible plants to the map.
+		    Thank you for adding public fruit trees and edible plants to the map. <br>
+		    If you have any question please contact Rachel Gillooly (she/her) <br>
+		    Ending Poverty Roundtable Coordinator, CKL / Haliburton County <br>
+		    705.887.3535, ext. 27 | REMOTE OFFICE CONTACT: 705-935-1064 | rgillooly@knfht.ca
             </h2>
             
         </div>
