--- a/index.html
+++ b/index.html
@@ -86,17 +86,19 @@
             
         </div>
 	 <div class="row mb-4">
-            <h2 class="col-6 tm-text-primary" style="width: auto; font-size: medium; color: #A9A9A9; ">
+            <h2  style="width: auto; font-size: medium; color: #A9A9A9; ">
                Welcome to the Kawartha Lakes and Haliburton County Fruit Tree and Edible Plant Map.<br>
 		    Kawartha Lakes and Haliburton County are on the territory
 		    of the Michi Saagiig Anishnaabe who have cared for these lands and waters since time immemorial and are covered by the Williams Treaties. This website enables all of us in the community to identify fruit bearing trees and bushes on publicly owned land such as roadsides and parks and then add them to this map so we all have access to. 
 		    On this website you will find instructions on how to locate what is currently on the map and get help to identify and add the new trees and bushes you find. 
 		    You will learn that you can easily add these to the map from your phone or computer, add a photograph if you like and find links to recipes and harvesting information. 
 		    Be gentle with the trees and bushes when you harvest the food.  Always leave some for wildlife. If you find that you have more than you can use, kindly contact your local food bank to see if they can accept your extra harvest. <br>
+		    <br>
 		    Thank you for adding public fruit trees and edible plants to the map. <br>
+		    <br>
 		    If you have any question please contact Rachel Gillooly (she/her) <br>
 		    Ending Poverty Roundtable Coordinator, CKL / Haliburton County <br>
-		    705.887.3535, ext. 27 | REMOTE OFFICE CONTACT: 705-935-1064 | rgillooly@knfht.ca
+		   <br> 705.887.3535, ext. 27 | REMOTE OFFICE CONTACT: 705-935-1064 | rgillooly@knfht.ca
             </h2>
             
         </div>
