--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		    <br>
 		    If you have any questions please contact Rachel Gillooly (she/her) <br>
 		    Ending Poverty Roundtable Coordinator, CKL / Haliburton County <br>
-		   <br> 705.887.3535, ext. 27 | REMOTE OFFICE CONTACT: 705-935-1064 | rgillooly@knfht.ca
+		    705.887.3535, ext. 27 | REMOTE OFFICE CONTACT: 705-935-1064 | rgillooly@knfht.ca
             </h2>
             
         </div>
