--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Kawartha Fruit Tree Map</title>
+    <title>Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map</title>
     <!-- Responsive -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -87,9 +87,10 @@
         </div>
 	 <div class="row mb-4">
             <h2  style="width: auto; font-size: medium; color: #A9A9A9;  font-weight: normal; ">
-               Welcome to the Kawartha Lakes and Haliburton County Fruit Tree and Edible Plant Map.<br>
+               Welcome to the Kawartha Lakes and Haliburton County Fruit Tree and Edible Plant Map.<br><br>
 		    Kawartha Lakes and Haliburton County are on the territory
-		    of the Michi Saagiig Anishnaabe who have cared for these lands and waters since time immemorial and are covered by the Williams Treaties. This website enables all of us in the community to identify fruit bearing trees and bushes on publicly owned land such as roadsides and parks and then add them to this map so we all have access to them. 
+		    of the Michi Saagiig Anishnaabe who have cared for these lands and waters since time immemorial and are covered by the Williams Treaties.<br><br> 
+		    This website enables all of us in the community to identify fruit bearing trees and bushes on publicly owned land such as roadsides and parks and then add them to this map so we all have access to them. 
 		    On this website you will find instructions on how to locate what is currently on the map and get help to identify and add the new trees and bushes you find. 
 		    You will learn that you can easily add these to the map from your phone or computer, add a photograph if you like and find links to recipes and harvesting information. 
 		    Be gentle with the trees and bushes when you harvest the food.  Always leave some for wildlife. If you find that you have more than you can use, kindly contact your local food bank to see if they can accept your extra harvest. <br>
@@ -112,7 +113,7 @@
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span>Partners for this project include Haliburton County/City of Kawartha Lakes Roundtable for Ending Poverty, the Kawartha Lakes Food Coalition 
+                    <span>Partners for this project include the City of Kawartha Lakes, Haliburton County/City of Kawartha Lakes Roundtable for Ending Poverty, the Kawartha Lakes Food Coalition 
                         Food Security Working Group and Fleming College Urban Forestry and GIS departments.
                     </span>
                     
