--- a/Guide.html
+++ b/Guide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%;">
 <head>
-    <title>Kawartha Fruit Tree Map</title>
+    <title>Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map</title>
     <!-- Responsive -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
