--- a/plantlist.html
+++ b/plantlist.html
@@ -29,7 +29,7 @@
     <!-- NEW NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-             <a class="navbar-brand" href="fruittreemap.html">Kawartha Fruit Tree Map</a>
+             <a class="navbar-brand" href="fruittreemap.html">Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
