--- a/Guide.html
+++ b/Guide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%;">
 <head>
-    <title>Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map</title>
+    <title>Fruit Tree and Edible Plant Map</title>
     <!-- Responsive -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -54,7 +54,7 @@
     <!-- NEW NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-             <a class="navbar-brand" href="fruittreemap.html">Kawartha Fruit Tree Map</a>
+             <a class="navbar-brand" href="fruittreemap.html">Kawartha Lakes and Haliburton Fruit Tree and Edible Plant Map</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
